--- a/content.css
+++ b/content.css
@@ -2,6 +2,10 @@
   line-height: 1.5;
 }
 
+.delete-issue:hover {
+  text-decoration: none;
+}
+
 .issue-header {
   display: flex;
   justify-content: space-between;
@@ -18,6 +22,10 @@
   vertical-align: middle;
   display: inline-block;
   cursor: pointer;
+}
+
+.has-warning:after {
+  content: ' ⚠️';
 }
 
 /* OVERRIDES */
